# ton

./: DEPLOY.md  README.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOY_README.md  build.js  build.mjs  dirname-polyfill.mjs  node-compat.cjs  package-lock.json  package.json  postbuild.mjs  project.json  pyproject.toml  theme.json  tsconfig.vercel.json  vercel-build.cjs  vercel-checker.cjs  vercel-node-compat.js  vercel-node-compat.mjs  vercel-node-compatibility.js  vercel-project-configuration.json  vercel.cjs  vercel.config.js  vercel.config.json  vercel.json  vite-compat.js  with-node-18.js
api/: [[...path]].ts  _middleware.ts  healthcheck.ts
attached_assets/: Pasted--11-53-04-366-Cloning-github-com-sulimcode-anon-Branch-main-Commit-6447b58-11-53-05-095-Prev-1745053292808.txt  Pasted--11-53-04-366-Cloning-github-com-sulimcode-anon-Branch-main-Commit-6447b58-11-53-05-095-Prev-1745055143213.txt  Pasted--17-51-54-789-Cloning-github-com-sulimcode-low-Branch-main-Commit-0cd4218-17-51-55-418-Previ-1745074403394.txt  Pasted--server-index-ts-import-express2-from-express-server-routes-ts-import-createServer-from-1744995514594.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: Footer.tsx  Header.tsx  LocationSelector.tsx  MonthlySchedule.tsx  NextPrayerCountdown.tsx  PrayerTimesDisplay.tsx
client/src/contexts/: LanguageContext.tsx  ThemeContext.tsx
client/src/lib/: api.ts  queryClient.ts
server/: db.ts  dirname-import.js  index.ts  polyfill.js  routes.ts  storage.ts
server/services/: prayerTimes.ts
shared/: schema.ts  types.ts
(+4 files in other folders)
